--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URI = mongodb+srv://developeraqeeb:RQJDgtchNZlmGxb2@cluster0.r99clag.mongodb.net/blogs
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
